# DockMeow

./: .coverage  .gitattributes  .gitignore  LICENSE  README.md  README_CN.md  dockmeow_public.pem  pyproject.toml  requirements-build.txt  requirements-lock.txt
.github/workflows/: ci.yml  release.yml
LICENSES/: Meeko.LICENSE  PySide6.LICENSE  RDKit.LICENSE  Vina.LICENSE
docs/: LOCAL_VERIFICATION.md
examples/: README_CN.md
packaging/: dockmeow.spec
packaging/hooks/: hook-PySide6.QtWebEngineCore.py  rthook-pyside6-eager.py  rthook-webengine.py
packaging/linux/: build_appimage.sh
packaging/macos/: DockMeow.icns  Info.plist  build_dmg.sh  entitlements.plist  sign_app.sh
packaging/windows/: build_win.bat  build_win.ps1  installer.iss  requirements-build-win.txt  winbuild.bat
src/dockmeow/: __init__.py  __main__.py  app.py  version.py
src/dockmeow/core/: __init__.py  _utils.py  cli.py  docking.py  exceptions.py  ligand.py  pocket.py  pymol_export.py  receptor.py  report.py  results.py
src/dockmeow/licensing/: __init__.py  _keystore.py  machine.py  obfuscation.py  state.py  time_guard.py  trial.py  verifier.py
src/dockmeow/ui/: i18n.py  main_window.py  post_docking_prompts.py
src/dockmeow/ui/dialogs/: about_dialog.py  activation_dialog.py  custom_box_dialog.py  license_expired_dialog.py  machine_mismatch_dialog.py
src/dockmeow/ui/pages/: page_ligand.py  page_params.py  page_pocket.py  page_receptor.py  page_results.py  page_run.py  page_welcome.py
src/dockmeow/ui/resources/: styles.qss
src/dockmeow/ui/widgets/: drop_zone.py  log_console.py  (+2 more)
src/dockmeow/utils/: config.py  logging_setup.py  paths.py  subprocess.py
src/dockmeow/workers/: docking_worker.py  pocket_worker.py  prepare_worker.py
tests/: conftest.py  test_cli.py  test_docking.py  test_docking_results.py  test_e2e_licensing.py  test_licensing.py  test_ligand.py  test_machine_id.py  test_pocket.py  test_pocket_detection.py  test_post_docking_prompts.py  test_receptor.py  test_receptor_page.py  test_receptor_real_world.py  test_receptor_retry.py  test_report.py  test_results.py  test_subprocess_utils.py  test_time_guard.py  test_trial.py  test_ui_regressions.py  test_version_metadata.py
tests/data/real_world/: Ailanthone.sdf  README.md
tools/: capture_screenshots.py  generate_keypair.py  get_machine_id.py  inject_build_info.py  issue_license.py  quick_issue.py  revoke_check.py  string_encode.py  test_pdf_screenshot.py
(+3 files in other folders)
