[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dockmeow"
version = "2.3.3"
description = "DockMeow / 一键对接 — GUI-based molecular docking for researchers"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { file = "LICENSE" }
authors = [{ name = "DockMeow Team" }]
keywords = ["molecular docking", "cheminformatics", "drug discovery", "AutoDock Vina", "GUI"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Environment :: X11 Applications :: Qt",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "PySide6>=6.11,<6.12",
    "vina>=1.2.5",          # conda-forge only; pip sdist requires Boost C++ headers
    "meeko>=0.7,<0.8",      # 0.7 changed receptor prep to Polymer API and write_string to 3-tuple
    "rdkit>=2024.3.1",
    "pdbfixer>=1.9",
    "gemmi>=0.6",            # runtime dep of pdbfixer>=1.9 (not declared by pdbfixer)
    "openmm>=8.1",
    "numpy>=1.26",
    "scipy>=1.11",           # runtime dep of meeko receptor parsing
    "py3Dmol>=2.1",
    "biopython>=1.83",
    "cryptography>=42.0",
    "reportlab>=4.0",
]

[project.urls]
Homepage = "https://github.com/jiamingf09-tech/DockMeow"
Repository = "https://github.com/jiamingf09-tech/DockMeow"
Issues = "https://github.com/jiamingf09-tech/DockMeow/issues"
Releases = "https://github.com/jiamingf09-tech/DockMeow/releases"

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest>=8"]
build = ["pyinstaller>=6.5"]

[project.scripts]
dockmeow = "dockmeow.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"dockmeow" = [
    "bundled/fpocket/**/*",
    "ui/resources/**/*",
]

[tool.pytest.ini_options]
addopts = "--tb=short -m 'not slow'"
norecursedirs = ["tools", "packaging", ".venv*", "dist", "build", ".claude"]
markers = [
    "slow: end-to-end tests that run the full docking pipeline (deselected by default)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
